--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,12 +58,12 @@ jobs:
           
       # S3로 압축 파일 업로드
       - name: upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./server.zip s3://YOUR_BUCKET_NAME/public/
+        run: aws s3 cp --region ap-northeast-2 ./server.zip s3://${{secrets.BUCKET_NAME}}/public/
 
       # AWS CodeDeploy를 사용하여 배포
       - name: deploy with AWS codeDeploy
         run: aws deploy create-deployment
-          --application-name YOUR_APP_NAME_IN_CODEDEPLOY
+          --application-name ${{CODEDEPLOY_APP_NAME}}
           --deployment-config-name CodeDeployDefault.OneAtATime
-          --deployment-group-name YOUR_DEPLOY_GROUP_NAME_IN_CODEDEPLOY
-          --s3-location bucket=YOUR_BUCKET_NAME,bundleType=zip,key=public/server.zip
+          --deployment-group-name ${{CODEDEPLOY_DG_NAME}}
+          --s3-location bucket=${{secrets.BUCKET_NAME}},bundleType=zip,key=public/server.zip
