--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
       # AWS CodeDeploy를 사용하여 배포
       - name: deploy with AWS codeDeploy
         run: aws deploy create-deployment
-          --application-name ${{CODEDEPLOY_APP_NAME}}
+          --application-name ${{secrets.CODEDEPLOY_APP_NAME}}
           --deployment-config-name CodeDeployDefault.OneAtATime
-          --deployment-group-name ${{CODEDEPLOY_DG_NAME}}
+          --deployment-group-name ${{secrets.CODEDEPLOY_DG_NAME}}
           --s3-location bucket=${{secrets.BUCKET_NAME}},bundleType=zip,key=public/server.zip
